made it mobile friendly

--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -46,3 +46,11 @@
     transform: rotate(360deg);
   }
 }
+
+@media screen and (max-width: 768px) {
+  .song-container {
+    img {
+      width: 60%;
+    }
+  }
+}
