--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -23,6 +23,12 @@
   transition: all 200ms ease-in;
   img {
     width: 35%;
+    user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
   }
   &:hover {
     background: lightcyan;
