--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -8,13 +8,13 @@
     margin: 2rem 0rem;
     width: 20%;
     border-radius: 50%;
-    user-drag: none;
     user-select: none;
     -moz-user-select: none;
     -webkit-user-drag: none;
     -webkit-user-select: none;
     -ms-user-select: none;
   }
+
   h2 {
     padding: 3rem 1rem 1rem 1rem;
   }
@@ -24,31 +24,19 @@
 }
 
 .current-song {
-  animation: spin 10s infinite linear;
+  animation: spin 5s linear infinite;
+}
+
+.pause {
+  animation-play-state: paused;
 }
 
 // Animation
-@-moz-keyframes spin {
-  from {
-    -moz-transform: rotate(0deg);
-  }
-  to {
-    -moz-transform: rotate(360deg);
-  }
-}
-@-webkit-keyframes spin {
-  from {
-    -webkit-transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-  }
-}
 @keyframes spin {
-  from {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
   }
 }
